--- a/index.html
+++ b/index.html
@@ -51,20 +51,20 @@
             <div class="input-group f-class">
                 <div>
                     <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <input id="firstCls-count" class="inp-style inp-width" type="number" name="" value="0">
                 </div>
-                <div class="plus-minus-btn">
-                    <p>+ -</p>
+                <div class="plus-minus-btn">                    
+                    <p><span onclick="handleTicketChange('firstCls', false)" >-</span> <span onclick="handleTicketChange('firstCls', true)" >+</span></p>
                 </div>
             </div>
             
             <div class="input-group f-class">
                 <div>
                     <label for="">Economy ($100)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <input id="economy-count" class="inp-style inp-width" type="number" name="" value="0">
                 </div>
                 <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
+                    <p><span onclick="handleTicketChange('economy', false)">-</span> <span onclick="handleTicketChange('economy', true)" >+</span> </p>
                 </div>
             </div>
             <div class="calculations">
@@ -73,7 +73,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p id="total-price">$00</p>
                     </div>
                 </div>
 
@@ -82,7 +82,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p id="tax-amount" >$00</p>
                     </div>
                 </div>
                 <hr>
@@ -91,7 +91,7 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p id="grand-total" >$00</p>
                     </div>
                 </div>
             </div>
@@ -103,6 +103,45 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicingelit. Provident voluptatibus quam fuga laborumalias veniam libero autem quasi maxime ullam vero nama imi dolor, architecto ab facilis eaque deserunt nobise voluptatibus quam</p>
         </div>
     </section>
+    <script>
+
+            function handleTicketChange(ticket, isIncrease){
+            const ticketInput = document.getElementById(ticket + '-count');
+            const countTicket = parseInt(ticketInput.value)            
+            let ticketNewCount = countTicket;
+            if(isIncrease == true){
+                ticketNewCount = countTicket + 1;
+            } 
+            if(isIncrease == false && countTicket > 0){
+                ticketNewCount = countTicket - 1;
+            }
+            ticketInput.value = ticketNewCount;
+
+            calculateTotal();
+        }
+
+        function calculateTotal(){           
+            const firstClsCount = getInputValue('firstCls');
+
+            const economyCount = getInputValue('economy');
+
+            const totalPrice = firstClsCount * 150 + economyCount * 100;
+            document.getElementById('total-price').innerText = '$' + totalPrice;
+
+            const tax = Math.round(totalPrice * 0.1);
+            document.getElementById('tax-amount').innerText = '$' + tax;
+
+            const grandTotal = totalPrice + tax;
+            document.getElementById('grand-total').innerText = '$' + grandTotal;
+        }
+
+        function getInputValue(price){
+            const priceInput = document.getElementById(price + '-count');
+            const priceCount = parseInt(priceInput.value);
+            return priceCount;
+        }       
+        
+    </script>
 
     <!--Thank You-->
 </body>
